5-Carga-Servicios-canary/frontend2.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-istio-v2-deploy
  namespace: test-services
  labels:
    app: front-istio-v2
    version: v2
spec:
  selector:
    matchLabels:
      app: front-istio-v2
      version: v2
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: front-istio-v2
        version: v2
    spec:
      containers:
        - name: front-istio-v2
          image: acjimeneza/front-istio:2
          imagePullPolicy: Always
          ports:
            - containerPort: 4200
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
---

---
apiVersion: v1
kind: Service
metadata:
  name: front-istio-v2
  namespace: test-services
  labels:
    app: front-istio-v2
spec:
  type: ClusterIP
  selector:
    app: front-istio-v2
  ports:
    - protocol: TCP
      name: http
      port: 4200
      targetPort: 4200
